# cert-monitor

./: Cargo.toml  Changes.md  LICENSE-APACHE  LICENSE-MIT  Readme.md
.github/workflows/: build-rust-on-linux.yml  release-rust.yml
src/: cert_retriever.rs  config.rs  main.rs  target_cert.rs
testdata/: gatekeeper.tschirky.ch.crt  gitea.tschirky.ch.crt  sites.json  www.tschirky.ch.crt
