[package]
name = "cert-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls = "0.23.22"
webpki-roots = "0.26.8"
x509-parser = "0.17.0"
time = "0.3.37"
log = { version = "0.4.25", features = [ "std"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
clap = { version = "4.5.29", features = ["derive"] }
console = { version = "0.15.10", features = ["windows-console-colors"]}
data-encoding = "2.7.0"
pem = "3.0.5"

