[package]
name = "cert-monitor"
version = "0.0.99"
edition = "2021"

[dependencies]
rustls = "0.23.27"
webpki-roots = "1.0.0"
x509-parser = "0.17.0"
time = "0.3.41"
log = { version = "0.4.27", features = [ "std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.38", features = ["derive"] }
console = { version = "0.15.11", features = ["windows-console-colors"]}
data-encoding = "2.9.0"


